# project-template.rs

./: .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/example_bin/: Cargo.toml
crates/example_bin/src/: main.rs
crates/example_lib/: Cargo.toml
crates/example_lib/src/: lib.rs
